permanent fix for missed folder /platform/plugins/Streams/files/Streams/icons/labels/Streams

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ platform/plugins/Users/files/Users/icons/*
 !platform/plugins/Users/files/Users/icons/future
 platform/plugins/Streams/files/Streams/icons/*
 !platform/plugins/Streams/files/Streams/icons/default
+!platform/plugins/Streams/files/Streams/icons/labels
 platform/plugins/Awards/classes/Composer/vendor
 platform/node_modules
 MyApp/local/*
