--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,8 @@ env:
 before_script:
 - if [[ "$DB" == "mysql" ]]; then mysql -e "create database IF NOT EXISTS myapp;" -uroot; fi
 
-script: phpunit -c /projects/qbix/Q/platform/tests/q.phpunit.xml
+before_script: 
+- php /MyApp/scripts/Q/configure.php
+- php /MyApp/scripts/Q/install.php --all
+
+script: phpunit -c /platform/tests/q.phpunit.xml
