--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,6 @@ before_script:
 before_script: 
 - php /MyApp/scripts/Q/configure.php
 - php /MyApp/scripts/Q/install.php --all
+- phpunit --version
 
 script: phpunit -c /platform/tests/q.phpunit.xml
