--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,7 @@ before_script:
 - if [[ "$DB" == "mysql" ]]; then mysql -e "create database IF NOT EXISTS myapp;" -uroot; fi
 
 before_script: 
-- phpunit --version
-- pwd
-- ls -la
-- cd 
-- ls -la
-- php /MyApp/scripts/Q/configure.php
-- php /MyApp/scripts/Q/install.php --all
+- php /home/travis/build/casualuser/Qbix/MyApp/scripts/Q/configure.php
+- php /home/travis/build/casualuser/Qbix/MyApp/scripts/Q/install.php --all
 
-script: phpunit -c /platform/tests/q.phpunit.xml
+script: phpunit -c /home/travis/build/casualuser/Qbix/platform/tests/q.phpunit.xml
