--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
 
 before_script: 
   - if [[ "$DB" == "mysql" ]]; then mysql -e "create database IF NOT EXISTS myapp;" -uroot; fi
-  - ln -s /home/travis/build/casualuser/Qbix/ /projects/qbix/Q/
+  - mkdir -P /projects/qbix/Q && ln -s /home/travis/build/casualuser/Qbix/ /projects/qbix/Q/
   - php /home/travis/build/casualuser/Qbix/MyApp/scripts/Q/configure.php
   - php /home/travis/build/casualuser/Qbix/MyApp/scripts/Q/install.php --all
 
