--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,10 @@ install:
 before_script: 
   - if [[ "$DB" == "mysql" ]]; then mysql -e "create database IF NOT EXISTS myapp;" -uroot; fi
   - sudo mkdir -p /projects/qbix/Q
-  - ln -s /home/travis/build/casualuser/Qbix /projects/qbix/Q
-  - php /home/travis/build/casualuser/Qbix/MyApp/scripts/Q/configure.php
-  - php /home/travis/build/casualuser/Qbix/MyApp/scripts/Q/install.php --all
+  - sudo ln -s /home/travis/build/casualuser/Qbix /projects/qbix/Q
+  - sudo chown -R travis:travis /projects/qbix/Q
+  - php /projects/qbix/Q/MyApp/scripts/Q/configure.php
+  - php /projects/qbix/Q/MyApp/scripts/Q/install.php --all
 
 script: 
   - phpunit -c /home/travis/build/casualuser/Qbix/platform/tests/q.phpunit.xml
